# i3_notify_bar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.md  template.md
.github/: dependabot.yml
.github/workflows/: rust.yml
emoji/: Cargo.toml
emoji/src/: replace.rs
i3_bar_components/: Cargo.toml
i3_bar_components/src/: component_manager.rs  lib.rs  property.rs  protocol.rs  string.rs
i3_bar_components/src/component_manager/: component_manager.rs  component_manager_messenger.rs  mod.rs
i3_bar_components/src/components/: button.rs  button_group.rs  label.rs  mod.rs  padding.rs  prelude.rs  progress_bar.rs
i3_notify_bar/: .gitignore  Cargo.toml  emojis  log  makefile
i3_notify_bar/src/: args.rs  components.rs  config.pest  config_parser.rs  debug_config.rs  icons.rs  main.rs  notification_bar.rs  path_manager.rs  rule.rs  template.rs
i3_notify_bar/src/args/: cli.rs  mod.rs
i3_notify_bar/src/components/: action_bar.rs  close_type.rs  label.rs  min_urgency_selector.rs  mod.rs  notification.rs  notification_bar.rs  notification_group.rs
i3_notify_bar/src/emoji/: ignore.rs  mod.rs  remove.rs  replace.rs
i3_notify_bar/src/mini_template/: compiler.rs  error.rs  filter.rs  mod.rs  modifier.rs  prelude.rs  renderer.rs  value.rs
i3_notify_bar/src/rule/: eval.rs  mod.rs  parser.rs  rule.rs
mini_template/: Cargo.toml
mini_template/benches/: my_benchmark.rs
mini_template/src/: compiler.rs  error.rs  lib.rs  modifier.rs  parser.rs  renderer.rs  template.pest  value.rs
notify_server/: Cargo.toml
notify_server/src/: events.rs  lib.rs  notification.rs  notify_server.rs  notify_server_free_desktop.rs  routes.rs
observer/: Cargo.toml
observer/src/: event_system.rs  lib.rs  observer.rs
