[workspace]
resolver = "2"
members = [
    "i3_notify_bar",
    "notify_server",
    "i3_bar_components",
    "observer",
    "emoji"
]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'thin'
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

