[package]
name = "i3_bar_components"
version = "0.1.0"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"