[package]
name = "i3_notify_bar"
version = "1.4.0"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i3_bar_components = { path = "../i3_bar_components"}
notify_server = { path = "../notify_server" }
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.9.0"
log = "0.4.14"
clap = "3.0.0-beta.2"
regex = "1.4.3"

[features]
fa_icons = []
mini_template = []
default = ["fa_icons", "mini_template"]
all = ["fa_icons", "mini_template"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'thin'
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false