[package]
name = "i3_notify_bar"
version = "1.7.1"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i3_bar_components = { path = "../i3_bar_components"}
mini_template = { path = "../mini_template" }
notify_server = { path = "../notify_server" }
emoji = { path = "../emoji" }
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.11.0"
log = "0.4.14"
clap = { version = "3.0.14", features = ["derive"] }
regex = "1.4.6"
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.4.0"

[dependencies.async-std]
version = "1.7.1"
features = ["attributes"]

[features]
fa_icons = []
mini_template_render = []
emoji_mode_replace = []
default = ["fa_icons", "mini_template_render", "emoji_mode_replace"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'thin'
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
