[package]
name = "notify_server"
version = "0.1.0"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "2.3.2"
zvariant = "3.6.0"
observer = { path = "../observer"}
log = "0.4.17"
