[package]
name = "notify_server"
version = "0.1.0"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.1.0"
zvariant = "3.3.1"
observer = { path = "../observer"}
log = "0.4.17"
