[package]
name = "notify_server"
version = "0.1.0"
authors = ["Julian Alberts <julian.alberts@ewe.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.2"
zvariant = "3.15"
observer = { path = "../observer"}
log = "0.4"
jbe = { git = "https://github.com/Julian-Alberts/JBE.git", version = "0.1.0" }
async-trait = "0.1.74"
mockall = "0.11.4"
